Revert "feat: add brand logo, 5-tap admin access, fullscreen bg, fix countdown"
This reverts commit 2854dacdebc1982cedf0cd2de480ff980c036ca6.

--- a/index.html
+++ b/index.html
@@ -32,7 +32,6 @@
       </div>
       <img id="main-logo" class="main-logo" src="" alt="" hidden>
       <button id="btn-record" class="btn-record" data-i18n="record">Enregistrer un message</button>
-      <img id="btn-admin-secret" class="brand-logo" src="assets/logos/Pastille purple.png" alt="Allo Souvenirs">
     </div>
   </section>
 
@@ -113,7 +112,7 @@
           <select id="cfg-text-position">
             <option value="above">Dessus la photo</option>
             <option value="below" selected>Dessous la photo</option>
-            <option value="fullscreen">Fond d'écran</option>
+            <option value="overlay">Superposé sur la photo</option>
           </select>
         </div>
         <div class="form-group">
